[tool.poetry]
name = "vtk_balance"
version = "0.1.0"
description = "VTK balance check bot"
authors = ["Menso <m.massanino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.9.2"
requests = "^2.28.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
